[gd_scene load_steps=11 format=3 uid="uid://xlidbdvfk6it"]

[ext_resource type="Script" path="res://level-2.gd" id="1_e0d48"]
[ext_resource type="PackedScene" uid="uid://xffa3odvd5ru" path="res://level-2-enemy.tscn" id="2_5wq8i"]
[ext_resource type="PackedScene" uid="uid://bogdmnpg1fi7x" path="res://boss-2.tscn" id="4_4tdpv"]
[ext_resource type="PackedScene" uid="uid://bjkvs2i514u1k" path="res://level-2-player.tscn" id="5_3m1jf"]
[ext_resource type="Texture2D" uid="uid://ggxvq0yl1hk8" path="res://img/sheet1.png" id="6_nox7h"]
[ext_resource type="PackedScene" uid="uid://d0f1jertr7xg6" path="res://spike_block.tscn" id="7_v5mkh"]
[ext_resource type="PackedScene" uid="uid://disvve2v8v6il" path="res://hud.tscn" id="8_r0i6r"]
[ext_resource type="PackedScene" uid="uid://baw1tcblcq3ot" path="res://message-panel.tscn" id="9_655y1"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_plb84"]
texture = ExtResource("6_nox7h")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.25, -13.75, 16, -16, 16, 16, 10.75, 16, 5.25, 16, -16, 16, -16, 5)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, -16, -16, 16, -16, 16, 16)
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0.96, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(1, 0)
3:5/0/physics_layer_0/angular_velocity = 2.0
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
5:5/0 = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:5/0/physics_layer_0/angular_velocity = 0.0
6:5/0 = 0
6:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:5/0/physics_layer_0/angular_velocity = 0.0
0:6/0 = 0
0:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:6/0/physics_layer_0/angular_velocity = 0.0
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
2:6/0 = 0
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0
3:6/0 = 0
3:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:6/0/physics_layer_0/angular_velocity = 0.0
4:6/0 = 0
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
5:6/0 = 0
5:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:6/0/physics_layer_0/angular_velocity = 0.0
6:6/0 = 0
6:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:6/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_nvucr"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
terrain_set_0/mode = 0
sources/0 = SubResource("TileSetAtlasSource_plb84")

[node name="Level2" type="Node2D"]
script = ExtResource("1_e0d48")
enemy_scene = ExtResource("2_5wq8i")

[node name="Boss2" parent="." instance=ExtResource("4_4tdpv")]
position = Vector2(8490, -117)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_nvucr")
format = 2
layer_0/name = "game"
layer_0/tile_data = PackedInt32Array(-655364, 65536, 0, -655365, 196608, 0, -1245187, 196608, 0, -1245188, 196608, 0, -1310724, 196608, 0, -1310723, 196608, 0, -1376259, 196608, 0, -1376258, 196608, 0, -1376257, 196608, 0, -1441793, 196608, 0, -1507328, 196608, 0, -1441794, 196608, 0, -1507330, 196608, 0, -1572866, 196608, 0, -1638402, 196608, 0, -1638401, 196608, 0, -1703937, 196608, 0, -1769472, 196608, 0, -1769471, 196608, 0, -1835007, 196608, 0, -523989, 262144, 1, -589525, 262144, 1, -655061, 262144, 1, -720597, 262144, 1, -786133, 262144, 1, -851669, 262144, 1, -917205, 262144, 1, -982741, 262144, 1, -982742, 262144, 1, -1048278, 262144, 1, -1113814, 262144, 1, -1179350, 262144, 1, -1179351, 262144, 1, -1244887, 262144, 1, -1244886, 262144, 1, -1310422, 262144, 1, -1375958, 262144, 1, -1441494, 262144, 1, -1441493, 262144, 1, -720896, 65536, 0, -655361, 65536, 0, -655362, 65536, 0, -655363, 65536, 0, -720895, 65536, 0, -720894, 65536, 0, -720893, 65536, 0, -655356, 65536, 0, -655355, 65536, 0, -655354, 65536, 0, -655353, 65536, 0, -655352, 65536, 0, -655351, 65536, 0, -655350, 65536, 0, -655349, 65536, 0, -655348, 65536, 0, -655347, 65536, 0, -655346, 65536, 0, -655345, 65536, 0, -655344, 65536, 0, -655343, 65536, 0, -655342, 65536, 0, -655341, 65536, 0, -655340, 65536, 0, -655339, 65536, 0, -655338, 65536, 0, -655337, 65536, 0, -655336, 65536, 0, -655335, 65536, 0, -655334, 65536, 0, -655333, 65536, 0, -655332, 65536, 0, -655331, 65536, 0, -655330, 65536, 0, -655329, 65536, 0, -655328, 65536, 0, -655327, 65536, 0, -655326, 65536, 0, -655325, 65536, 0, -655324, 65536, 0, -655323, 65536, 0, -655322, 65536, 0, -655318, 65536, 0, -655317, 65536, 0, -655316, 65536, 0, -655315, 65536, 0, -655314, 65536, 0, -655313, 65536, 0, -655312, 65536, 0, -655311, 65536, 0, -655310, 65536, 0, -655309, 65536, 0, -655308, 65536, 0, -655307, 65536, 0, -655306, 65536, 0, -655305, 65536, 0, -655304, 65536, 0, -655303, 65536, 0, -655302, 65536, 0, -655301, 65536, 0, -655300, 65536, 0, -655299, 65536, 0, -655298, 65536, 0, -655297, 65536, 0, -655296, 65536, 0, -655295, 65536, 0, -655294, 65536, 0, -655293, 65536, 0, -655292, 65536, 0, -655291, 65536, 0, -655290, 65536, 0, -655289, 65536, 0, -655288, 65536, 0, -655287, 65536, 0, -655286, 65536, 0, -655285, 65536, 0, -655284, 65536, 0, -655283, 65536, 0, -655282, 65536, 0, -655281, 65536, 0, -655280, 65536, 0, -655279, 65536, 0, -655278, 65536, 0, -655277, 65536, 0, -655276, 65536, 0, -655275, 65536, 0, -655274, 65536, 0, -655273, 65536, 0, -655272, 65536, 0, -655271, 65536, 0, -655270, 65536, 0, -655269, 65536, 0, -655268, 65536, 0, -655267, 65536, 0, -655266, 65536, 0, -655265, 65536, 0, -655264, 65536, 0, -655263, 65536, 0, -655262, 65536, 0, -655261, 65536, 0, -655260, 65536, 0, -655259, 65536, 0, -655258, 65536, 0, -655257, 65536, 0, -655256, 65536, 0, -655255, 65536, 0, -655254, 65536, 0, -655253, 65536, 0, -655252, 65536, 0, -655251, 65536, 0, -655250, 65536, 0, -655249, 65536, 0, -655248, 65536, 0, -655247, 65536, 0, -655246, 65536, 0, -720841, 65536, 0, -720840, 65536, 0, -720839, 65536, 0, -720838, 65536, 0, -720837, 65536, 0, -720836, 65536, 0, -720835, 65536, 0, -720834, 65536, 0, -720833, 65536, 0, -720832, 65536, 0, -720831, 65536, 0, -786366, 65536, 0, -786365, 65536, 0, -786364, 65536, 0, -786363, 65536, 0, -786362, 65536, 0, -786361, 65536, 0, -786360, 65536, 0, -786359, 65536, 0, -786358, 65536, 0, -786357, 65536, 0, -786356, 65536, 0, -786355, 65536, 0, -786354, 65536, 0, -786353, 65536, 0, -786352, 65536, 0, -786351, 65536, 0, -786350, 65536, 0, -786349, 65536, 0, -786348, 65536, 0, -786347, 65536, 0, -786346, 65536, 0, -786345, 65536, 0, -786344, 65536, 0, -786343, 65536, 0, -786342, 65536, 0, -720806, 65536, 0, -720805, 65536, 0, -720804, 65536, 0, -720803, 65536, 0, -720802, 65536, 0, -720801, 65536, 0, -720800, 65536, 0, -720799, 65536, 0, -720798, 65536, 0, -720797, 65536, 0, -720796, 65536, 0, -720795, 65536, 0, -720793, 65536, 0, -720792, 65536, 0, -720791, 65536, 0, -720790, 65536, 0, -720789, 65536, 0, -720788, 65536, 0, -720787, 65536, 0, -720786, 65536, 0, -720785, 65536, 0, -720784, 65536, 0, -720783, 65536, 0, -720782, 65536, 0, -720781, 65536, 0, -720780, 65536, 0, -655243, 65536, 0, -655242, 65536, 0, -655241, 65536, 0, -589704, 65536, 0, -589703, 65536, 0, -589702, 65536, 0, -524165, 65536, 0, -524164, 65536, 0, -524163, 65536, 0, -524162, 65536, 0, -524161, 65536, 0, -524160, 65536, 0, -524159, 65536, 0, -524158, 65536, 0, -589693, 65536, 0, -589692, 65536, 0, -589691, 65536, 0, -589690, 65536, 0, -655225, 65536, 0, -655224, 65536, 0, -720759, 65536, 0, -720758, 65536, 0, -786293, 65536, 0, -786292, 65536, 0, -851827, 65536, 0, -851826, 65536, 0, -851825, 65536, 0, -917360, 65536, 0, -917359, 65536, 0, -982895, 65536, 0, -982894, 65536, 0, -982893, 65536, 0, -982892, 65536, 0, -982891, 65536, 0, -982890, 65536, 0, -982889, 65536, 0, -917352, 65536, 0, -917351, 65536, 0, -917350, 65536, 0, -851814, 65536, 0, -851813, 65536, 0, -851812, 65536, 0, -786276, 65536, 0, -786275, 65536, 0, -786274, 65536, 0, -720738, 65536, 0, -720737, 65536, 0, -655200, 65536, 0, -655199, 65536, 0, -655198, 65536, 0, -655197, 65536, 0, -589661, 65536, 0, -589660, 65536, 0, -589659, 65536, 0, -589658, 65536, 0, -589657, 65536, 0, -589656, 65536, 0, -589655, 65536, 0, -589654, 65536, 0, -589653, 65536, 0, -589652, 65536, 0, -589651, 65536, 0, -655186, 65536, 0, -655185, 65536, 0, -655184, 65536, 0, -655183, 65536, 0, -720719, 65536, 0, -720718, 65536, 0, -720717, 65536, 0, -786253, 65536, 0, -786252, 65536, 0, -786251, 65536, 0, -786250, 65536, 0, -786249, 65536, 0, -720713, 65536, 0, -720712, 65536, 0, -655175, 65536, 0, -589638, 65536, 0, -524102, 65536, 0, -524101, 65536, 0, -458564, 65536, 0, -458563, 65536, 0, -458562, 65536, 0, -393025, 65536, 0, -393024, 65536, 0, -393023, 65536, 0, -393022, 65536, 0, -393021, 65536, 0, -393020, 65536, 0, -393019, 65536, 0, -393018, 65536, 0, -393017, 65536, 0, -393016, 65536, 0, -393015, 65536, 0, -393014, 65536, 0, -393013, 65536, 0, -458548, 65536, 0, -458547, 65536, 0, -458546, 65536, 0, -458545, 65536, 0, -458544, 65536, 0, -393007, 65536, 0, -393006, 65536, 0, -393005, 65536, 0, -393004, 65536, 0, -393003, 65536, 0, -393002, 65536, 0, -393001, 65536, 0, -393000, 65536, 0, -392999, 65536, 0, -392998, 65536, 0, -392997, 65536, 0, -392996, 65536, 0, -392995, 65536, 0, -392994, 65536, 0, -392993, 65536, 0, -458529, 65536, 0, -458528, 65536, 0, -458527, 65536, 0, -458526, 65536, 0, -458525, 65536, 0, -458524, 65536, 0, -392987, 65536, 0, -392986, 65536, 0, -392985, 65536, 0, -392984, 65536, 0, -392983, 65536, 0, -392982, 65536, 0, -392981, 65536, 0, -392980, 65536, 0, -392979, 65536, 0, -392978, 65536, 0, -392977, 65536, 0, -392976, 65536, 0, -392975, 65536, 0, -392974, 65536, 0, -458509, 65536, 0, -458508, 65536, 0, -458507, 65536, 0, -458506, 65536, 0, -458505, 65536, 0, -458504, 65536, 0, -458503, 65536, 0, -458502, 65536, 0, -458501, 65536, 0, -458500, 65536, 0, -458499, 65536, 0, -392963, 65536, 0, -392962, 65536, 0, -392961, 65536, 0, -392960, 65536, 0, -392959, 65536, 0, -392958, 65536, 0, -392957, 65536, 0, -392956, 65536, 0, -392955, 65536, 0, -392954, 65536, 0, -392953, 65536, 0, -392952, 65536, 0, -392951, 65536, 0, -392950, 65536, 0, -392949, 65536, 0, -392948, 65536, 0, -392947, 65536, 0, -392946, 65536, 0, -392945, 65536, 0, -392944, 65536, 0, -392943, 65536, 0)

[node name="HUD" parent="." instance=ExtResource("8_r0i6r")]

[node name="MessagePanel" parent="." instance=ExtResource("9_655y1")]
offset_left = 6546.0
offset_top = -389.0
offset_right = 6734.0
offset_bottom = -181.0
text = "Vous entrez dans l'antre
du bosse : 
Alimentation Hedan-gereuse"

[node name="Level2Player" parent="." instance=ExtResource("5_3m1jf")]
position = Vector2(218, -572)
scale = Vector2(2, 2)

[node name="Camera2D" type="Camera2D" parent="Level2Player"]
position = Vector2(38, -100)
scale = Vector2(2, 2)
limit_right = 100000000
limit_bottom = 40
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.1
drag_top_margin = 0.1
drag_right_margin = 0.1
drag_bottom_margin = 0.1

[node name="Enemy1GeneratorTimer" type="Timer" parent="."]
wait_time = 2.057

[node name="Enemy2GeneratorTimer" type="Timer" parent="."]
wait_time = 3.105

[node name="SpikeBlock" parent="." instance=ExtResource("7_v5mkh")]
position = Vector2(1263, -302)

[node name="SpikeBlock" parent="SpikeBlock" instance=ExtResource("7_v5mkh")]
position = Vector2(1302, -302)

[node name="SpikeBlock" parent="SpikeBlock/SpikeBlock" instance=ExtResource("7_v5mkh")]
position = Vector2(-1270, 302)

[node name="SpikeBlock" parent="SpikeBlock/SpikeBlock/SpikeBlock" instance=ExtResource("7_v5mkh")]
position = Vector2(32, 0)

[node name="SpikeBlock2" parent="SpikeBlock/SpikeBlock" instance=ExtResource("7_v5mkh")]
position = Vector2(-981, 268)
rotation = -1.5708

[connection signal="killed" from="Boss2" to="." method="_on_boss_2_killed"]
[connection signal="lost" from="Level2Player" to="." method="_on_level_2_player_lost"]
[connection signal="timeout" from="Enemy1GeneratorTimer" to="." method="_on_enemy_1_generator_timer_timeout"]
[connection signal="timeout" from="Enemy2GeneratorTimer" to="." method="_on_enemy_2_generator_timer_timeout"]
